// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GridToolbar.vue snapshots: should match if device is \`desktop\` 1`] = `
<wrapper-clearfix-stub
  class="general"
>
  <default-sticky-tabs-stub
    class="tabs"
  />
   
  <wrapper-section-stub
    class="rows"
    title="Show rows"
  >
    <div
      class="mfn-field mfnf-checkbox"
    >
      <div
        class="switch"
      >
        <span
          class="path"
        />
         
        <span
          class="handle"
        />
      </div>
       
      <label>
        Action bar
      </label>
    </div>
     
    <div
      class="mfn-field mfnf-checkbox"
    >
      <div
        class="switch"
      >
        <span
          class="path"
        />
         
        <span
          class="handle"
        />
      </div>
       
      <label>
        Second row
      </label>
    </div>
  </wrapper-section-stub>
   
  <wrapper-section-stub
    class="layouts"
    title="Layouts"
  >
    <layout-tabs-stub
      class="select-position"
    />
  </wrapper-section-stub>
</wrapper-clearfix-stub>
`;

exports[`GridToolbar.vue snapshots: should match if device is NOT \`desktop\` 1`] = `
<wrapper-clearfix-stub
  class="general"
>
  <default-sticky-tabs-stub
    class="tabs"
  />
   
  <wrapper-section-stub
    class="rows"
    title="Show rows"
  >
    <div
      class="mfn-field mfnf-checkbox"
    >
      <div
        class="switch"
      >
        <span
          class="path"
        />
         
        <span
          class="handle"
        />
      </div>
       
      <label>
        Action bar
      </label>
    </div>
     
    <div
      class="mfn-field mfnf-checkbox"
    >
      <div
        class="switch"
      >
        <span
          class="path"
        />
         
        <span
          class="handle"
        />
      </div>
       
      <label>
        Second row
      </label>
    </div>
  </wrapper-section-stub>
   
  <!---->
</wrapper-clearfix-stub>
`;
